--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 chrono = "0.4.39"
 clap = { version = "4.5.16", features = ["derive"] }
 dirs = "5.0.1"
+nu-ansi-term = "0.50.1"
 reedline = "0.38.0"
 rusqlite = { version = "0.32.1", features = ["bundled"] }
 shlex = "1.3.0"
